[Refactor] add user email to header after authentication in api-gateway (#20)